# hangman-game

./: .gitignore  hangman.cabal  readme.md
src/: Main.hs
