name:                hangman
version:             0.1.0.0
synopsis:            Hangman Game
license:             MIT
author:              Badr Chaouai
maintainer:          badr.chaouai@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
